tests/parser/errors/while.ray
while true 1+1
while {true} var a: int
var a = while true {}
